FInished ticket system

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "discord.js": "^14.14.1",
     "mongodb": "^6.5.0",
     "rimraf": "^5.0.5",
+    "sourcebin": "^5.0.0",
     "typescript": "^5.4.3"
   }
 }
