--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "dev": "rimraf dist && tsc && npm start",
-    "start": "node --env-file=.env dist/index.js"
+    "start": "rimraf dist && tsc && node --env-file=.env dist/src/index.js"
   },
   "dependencies": {
     "@sapphire/framework": "^5.0.10",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "discord.js": "^14.14.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "mongodb": "^6.5.0",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "typescript": "^5.4.3"
   }
